--- a/AntApp/MainPage.xaml
+++ b/AntApp/MainPage.xaml
@@ -5,9 +5,11 @@
              x:Class="AntApp.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+    <BlazorWebView x:Name="blazorWebView"
+            HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Components.Routes}" />
+            <RootComponent Selector="#app"
+                    ComponentType="{x:Type local:Routes}"/>
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
