--- a/AntApp/_Imports.razor
+++ b/AntApp/_Imports.razor
@@ -5,5 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using MudBlazor
+
 @using AntApp
 @using AntApp.Components
