--- a/AntCore/_Imports.razor
+++ b/AntCore/_Imports.razor
@@ -1,16 +1,10 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
+﻿@namespace AntCore
+
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
 @using MudBlazor
-@using MudBlazor.Services
-
-@using AntWeb
-@using AntWeb.Components
-@using AntWeb.Components.Layout
