--- a/AntApp/MainPage.xaml
+++ b/AntApp/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:AntApp"
+             NavigationPage.HasNavigationBar="False"
              x:Class="AntApp.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
